<resources>
    <string name="app_name">Job&amp;Orienta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profiling">ProfilingActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_popup_app">Job&amp;Orienta</string>
    <string name="title_no_internet_popup">Nessuna connessione a Internet.</string>

    <string name="venues_job_orienta">Job&amp;Orienta 2017</string>
    <string name="venues_orari_apertura">Orari di apertura:\n\n30 novembre: 09:00 &#8211; 18:00\n1 dicembre: 09:00 &#8211; 18:00\n2 dicembre: 09:00 &#8211; 16:00\n\nParcheggio autobus scuole gratuito:\n\nPer gli autobus privati che accompagnano i visitatori al JOB&amp;Orienta, è prevista la sosta gratuita presso l\'area parcheggio P3 Nuovo, situata in Viale del Lavoro, fino ad esaurimento posti. Attraverso una passerella pedonale sarà possibile raggiungere direttamente l\'Ingresso Cangrande, per accedere in manifestazione. </string>
    <string name="venues_mappa_padiglioni_title">Mappa dei padiglioni</string>
    <string name="venues_mappa_padiglioni_check">Controlla la mappa dei padiglioni</string>
    <string name="venues_biglietto_title">Il tuo biglietto</string>
    <string name="venues_biglietto_text">Accedi al tuo biglietto ed entra in un mondo senza carta. Accedi alle info del tuo espositore preferito, lascia il tuo curriculum e molto altro, tutto tramite il tuo biglietto.</string>
</resources>
